--- a/app/src/main/res/layout/activity_image_show.xml
+++ b/app/src/main/res/layout/activity_image_show.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context="com.app.status.Activity.ShowItem">
+    tools:context="com.abahstudio.status.Activity.ShowItem">
 
-    <com.app.status.Util.StatusBarView
+    <com.abahstudio.status.Util.StatusBarView
         android:id="@+id/statusBarView_imageShow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
