--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    tools:context="com.app.status.Activity.SplashScreen">
+    tools:context="com.abahstudio.status.Activity.SplashScreen">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
