--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.app.status.Activity.WelcomeActivity">
+    tools:context="com.abahstudio.status.Activity.WelcomeActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
