--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,10 +25,10 @@
             android:id="@+id/more_app"
             android:icon="@drawable/ic_more"
             android:title="@string/more_app" />
-        <item
-            android:id="@+id/privacy_policy"
-            android:icon="@drawable/ic_privacy"
-            android:title="@string/privacy_policy" />
+<!--        <item-->
+<!--            android:id="@+id/privacy_policy"-->
+<!--            android:icon="@drawable/ic_privacy"-->
+<!--            android:title="@string/privacy_policy" />-->
     </group>
 
 </menu>
